app/assets/stylesheets/style.css
/* ... */
.vis-navigation .vis-button:hover.vis-up:before {
    left: 30px;
    content: "Scroll up";
}

.vis-navigation .vis-button:hover.vis-down:before {
    left: 30px;
    content: "Scroll down";
}

.vis-navigation .vis-button:hover.vis-right:before {
    left: 30px;
    content: "Scroll right";
}

.vis-navigation .vis-button:hover.vis-left:before {
    left: 30px;
    content: "Scroll left";
}

.vis-navigation .vis-button:hover.vis-zoomOut:before {
    content: "Zoom out";
}

.vis-navigation .vis-button:hover.vis-zoomIn:before {
    content: "Zoom in";
}

.vis-navigation .vis-button:hover.vis-zoomExtends:before {
    content: "Reset focus";
}

.vis-navigation .vis-button:hover.vis-fullscreen-button:before {
    content: "Fullscreen";
}

.vis-navigation .vis-button:hover.vis-legend-button:before {
    content: "Show Legend";
}

div.popupMenu {
    position: absolute;
    top: 0px;
    left: 0px;
    display: block;
    background-color: #f2f2f2;
    border-radius: 4px;
    font-family: Arial, sans-serif;
    font-size: 14px;
    min-width: 150px;
    border: 1px solid #d4d4d4;
    z-index: 1200;
}

div.popupMenu ul {
    list-style-type: none;
    margin: 4px 0px;
    padding: 0px;
    cursor: default;
}

div.popupMenu ul li {
    padding: 4px 16px;
    cursor: pointer;
}

div.popupMenu ul li:hover {
    background-color: #4677f8;
    color: #fefefe;
}


/*
    ======================================
    UI Layout
    ======================================
*/

.ui-layout-row > .ui-splitbar {
    background: #2759AC;
    z-index: 500;
}

.ui-layout-column > .ui-splitbar {
    background: #2759AC;
    z-index: 500;
}

.ui-splitbar-icon {
    color: #fafafa;
}

.ui-splitbar-icon-down, .ui-splitbar-icon-up {
    margin-bottom: 3px;
}

/*
    ======================================
    Angular Material UI Layout
    ======================================
*/

#wrapper {
    height: 100%;
    width: 100%;
}

#flex-body {
    height: calc(100% - 250px);
}

#top-container {
    height: 55px;
}

main {
    width: 50%;
    margin-top: 10px;
}

#document {
    width: 250px;
}

#document, #right-side {
    width: 20%;
}

#metadata-view {
    height: 100%;
}

footer {
    height: 150px;
}

footer > md-tabs {
    height: 100%;
    margin-top: 10px;
}

footer > div #histogram {
    height: calc(100% - 25px);
}

.rg-bottom, .rg-left, .rg-right, .rg-top {
    background-color: #2759AC;
}

.rg-top, .rg-bottom {
    height: 10px;
}

.rg-left, .rg-right {
    width: 10px;
}
.rg-top span, .rg-bottom  span{
    border-width: 1px 0;
    left: 50%;
    margin: 2.5px 0 0 -10px;
    width: 20px;
    height: 3px;
}

.rg-left span, .rg-right span {
    border-width: 0 1px;
    top: 50%;
    margin:  -10px 0 0 2.5px;
    height: 20px;
    width: 3px;
}

.rg-bottom {
    margin-bottom: -10px;
}

.rg-top {
    margin-top: -10px;
}

.rg-left {
    margin-left: -10px;
}

.rg-right {
    margin-right: -10px;
}


/*
    ======================================
    Source Documents
    ======================================
*/

.highlight-general {
    font-weight: bold;
}

/* .entity-menu {
    margin-left: 0 !important;
    margin-right: 0 !important;
    padding-left: 0 !important;
    padding-right: 0 !important;
    width: 20px !important;
    font-size: 16px !important;
}*/

/*
    ======================================
    Document List
    ======================================
*/

/* TODO clean */

#document div#documents-view, #document > div:first-child {
    height: 100%;
}
#document div#documents-view div.docs-ul {
    height: calc(100% - 90px);
    overflow: auto;
}

#document-list {
    padding-left: 30px;
}
#documents-view .repeated-item .meta-tooltip {
    display: none;
}
#documents-view .repeated-item:hover .meta-tooltip {
    display: block;
}

/*#document-list li.doc-list-highlight {
    font-weight: bold;
    list-style-image: url("assets/../../images/folder-opened-icon.png");
}

#document-list li.doc-list-no-highlight {
    font-weight: normal;
    list-style-image: url("assets/../../images/folder-closed-icon.png");
}*/

#document-list li a:hover {
    text-decoration: none;
}

#documents-view .metadata-button {
    margin-right: 8px;
    padding-right: 16px;
    margin-left: 0px;
    padding-left: 0px;
}

.docs-loading {
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background: white;
    opacity: 0.5;
    text-align: center;
}

.no-sim-docs {
    margin-top: 20px;
    height: 100%;
    width: 100%;
    background: white;
    opacity: 0.5;
    text-align: center;
}

.docs-loading span {
    font-weight: bold;
    position: relative;
    top: 45%;
}

.md-content.md-show{
    height: auto !important;
}


.selected-entity {
  text-decoration: underline;
  /*color: #2759AC;*/
}

/*
    ======================================
    Bar Chart
    ======================================
*/

.chartBarchart-popover {
    max-height: 300px;
    overflow-y: auto;
}

/*
    ======================================
    Filters
    ======================================
*/

#filter-view > div:first-child {
    height: 100%;
}

#filterList {
	padding: 5px 5px;
	list-style-type: none;
    height: 80%;
}

.filterListItem {
	margin: 0 2px 2px 0;
	font-weight: normal;
}

/*
    ======================================
    Metadata
    ======================================
*/
#metadata {
    height: 100%;
}

#metadata-overview, #metadata_tabs, #metadata-overview2 {
    height: calc(100% - 74px);
}

#metadata_tabs .meta-chart-container {
    height: 100%;
    overflow: hidden;
}

#metadata_tabs .tab-content, #metadata-overview .tab-pane {
    height: 100%;
}

#metadata_tabs {
    height: calc(100% - 50px);
}

#metadata_tabs .tab-pane {
    height: 100%;
}

#metadata_tabs .scroll-chart {
    height: 100%;
    overflow-y: auto;
    overflow-x: hidden;
}

#metadata_tabs .meta-chart {
    height: 1000px;
}

@media(max-width: 1500px){
    .nav-tabs>li>a {
        font-size: 12px;
    }
}
/* ... */

